# libxdc-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
src/: lib.rs
